--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Edge1024
+name: edge1024
 
 # Short bio or description (displayed in the header)
 description: Sales of cloud computing
